--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_new_game_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity"
-    android:padding="@dimen/activity_vertical_margin">
+    tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity">
 
     <TableLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginTop="@dimen/fab_margin"
         android:stretchColumns="1">
 
         <TableRow
@@ -147,18 +150,19 @@
             </LinearLayout>
         </TableRow>
 
-        <TableRow
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:gravity="center">
-            <Button
-                android:id="@+id/new_game"
-                android:text="@string/start_game"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="startGame"
-                android:layout_gravity="center_horizontal"/>
-        </TableRow>
-
     </TableLayout>
-</ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        app:srcCompat="@drawable/ic_play_button_24dp"
+        android:id="@+id/new_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:onClick="startGame" />
+
+</RelativeLayout>
